--- a/qradmin/src/app/components/dialog/dialog.component.html
+++ b/qradmin/src/app/components/dialog/dialog.component.html
@@ -1,7 +1,4 @@
-<h3 mat-dialog-title>QR CODE</h3>
-<mat-dialog-content class="mat-typography">
-  <p *ngIf="data.qrcode !== undefined">{{ data.qrcode.data }}</p>
-</mat-dialog-content>
+<h3 mat-dialog-title>대기 등록을 하시겠습니까?</h3>
 <mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="true">OK</button>
+  <button mat-button [mat-dialog-close]="true">네</button>
 </mat-dialog-actions>
