--- a/qradmin/src/styles.scss
+++ b/qradmin/src/styles.scss
@@ -4,17 +4,13 @@
 .comment {
   font-weight: 900;
   font-size: 2rem;
-  color: #ee6352;
+  color: #000000;
 }
 
 .comment1 {
   font-weight: 900;
   font-size: 2rem;
-  color: #ee6352;
+  color: #000000;
 }
 
-.waitpeople {
-  font-weight: 900;
-  font-size: 2rem;
-  color: #ee6352;
-}
+
