--- a/public/styles.css
+++ b/public/styles.css
@@ -1245,19 +1245,13 @@ textarea.form-control-lg{min-height:calc(1.5em + 1rem + 2px)}
 .comment {
   font-weight: 900;
   font-size: 2rem;
-  color: #ee6352;
+  color: #000000;
 }
 
 .comment1 {
   font-weight: 900;
   font-size: 2rem;
-  color: #ee6352;
-}
-
-.waitpeople {
-  font-weight: 900;
-  font-size: 2rem;
-  color: #ee6352;
+  color: #000000;
 }
 
 /*# sourceMappingURL=styles.css.map*/
