--- a/qradmin/src/app/components/business/business.component.html
+++ b/qradmin/src/app/components/business/business.component.html
@@ -31,5 +31,5 @@
         <input type="number" [(ngModel)]="licenseNum" name="licenseNum" class="form-control">
     </div>
     <br>
-    <input type="submit" class="btn btn-primary" value="가입하기">
+    <input type="submit" class="btn btn-dark" value="가입하기">
 </form>
