--- a/qradmin/src/app/components/navbar/navbar.component.html
+++ b/qradmin/src/app/components/navbar/navbar.component.html
@@ -31,7 +31,11 @@
       </li>
 
       <li *ngIf="checkLoggedIn()" class="nav-item">
-        <a class="nav-link" routerLink="/qrscan">QRSCAN</a>
+        <a class="nav-link" routerLink="/qrscan">대기 순번 등록</a>
+      </li>
+
+      <li *ngIf="checkLoggedIn()" class="nav-item">
+        <a class="nav-link" routerLink="/qrscan">대기 서비스 제공</a>
       </li>
 
       <li *ngIf="checkLoggedIn()" class="nav-item">
