--- a/qradmin/src/app/components/pic-slide/pic-slide.component.html
+++ b/qradmin/src/app/components/pic-slide/pic-slide.component.html
@@ -1,10 +1,14 @@
-<div class="container">
+<div class="container" style="text-align: center">
   <owl-carousel [options]="homeSlider" [carouselClasses]="['owl-theme']">
     <div class="item">
-      <img src="../../assets/images/slide2.jpg" />
+      <img src="../../assets/images/img13.jpg" />
+      <br />
+      <h1>Qyaho 은행</h1>
     </div>
     <div class="item">
-      <img src="../../assets/images/slide1.jpg" />
+      <img src="../../assets/images/img22.png" /> 
+      <br />
+      <h1>Qyaho 은행</h1>
     </div>
   </owl-carousel>
 </div>
