--- a/qradmin/src/app/components/navbar/navbar.component.html
+++ b/qradmin/src/app/components/navbar/navbar.component.html
@@ -35,7 +35,7 @@
       </li>
 
       <li *ngIf="checkLoggedIn()" class="nav-item">
-        <a class="nav-link" routerLink="/qrscan">대기 서비스 제공</a>
+        <a class="nav-link" routerLink="/qrscan1">대기 서비스 제공</a>
       </li>
 
       <li *ngIf="checkLoggedIn()" class="nav-item">
