--- a/qradmin/src/app/components/businesslogin/businesslogin.component.html
+++ b/qradmin/src/app/components/businesslogin/businesslogin.component.html
@@ -31,5 +31,5 @@
       [(ngModel)]="licenseNum"
     />
   </div>
-  <input type="submit" class="btn btn-dark" value="Login" />
+  <input type="submit" class="btn btn-dark" value="로그인" />
 </form>
