--- a/public/styles.css
+++ b/public/styles.css
@@ -1254,4 +1254,10 @@ textarea.form-control-lg{min-height:calc(1.5em + 1rem + 2px)}
   color: #000000;
 }
 
+.waitpeople {
+  font-weight: 900;
+  font-size: 2rem;
+  color: #d6d31d;
+}
+
 /*# sourceMappingURL=styles.css.map*/
