--- a/qradmin/src/app/components/qrscan1/qrscan1.component.html
+++ b/qradmin/src/app/components/qrscan1/qrscan1.component.html
@@ -21,5 +21,7 @@
   <mat-icon class="stop">qr_code_scanner</mat-icon>
 </button>
 <br />
+<br />
+<h2>순번 확인을 위해 이 곳에 QR코드를 스캔해 주세요!</h2>
 <video #video autoplay muted playsinline width="640" height="480"></video>
 <canvas #canvas hidden></canvas>
