--- a/qradmin/src/app/components/Qrscan/qrscan.component.html
+++ b/qradmin/src/app/components/Qrscan/qrscan.component.html
@@ -24,6 +24,6 @@
 </button>
 <br />
 <br />
-<h2>대기를 원하시면 이 곳에 QR코드를 스캔해 주세요!<h2>
+<h2>대기를 원하시면 이 곳에 QR코드를 스캔해 주세요!</h2>
 <video #video autoplay muted playsinline width="640" height="480"></video>
 <canvas #canvas hidden></canvas>
